--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
-    "expo-splash-screen": "~0.6.2",
+    "expo-splash-screen": "~0.6.1",
     "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.2",
+    "expo-updates": "~0.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.3",
+    "react-native": "0.63.3",
     "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^3.1.4",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.13.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
