--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
-    "udacifitness-calendar": "github:ftrevo/react-native-calendars#master"
+    "udacifitness-calendar": "github:ftrevo/react-native-calendars#master",
+    "expo-location": "~9.0.0",
+    "expo-permissions": "~9.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
