--- a/app.json
+++ b/app.json
@@ -2,11 +2,26 @@
   "name": "UdaciFitness",
   "displayName": "UdaciFitness",
   "expo": {
-    "name": "UdaciFitness",
-    "slug": "UdaciFitness",
+    "sdkVersion": "38.0.0",
+    "name": "FitnessTrackingApp",
+    "description": "Triathlon tracker",
+    "slug": "your-fitness-app",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "orientation": "portrait",
+    "icon": "https://tylermcginnis.com/udacifitness-512.png",
+    "notification": {
+      "icon": "https://tylermcginnis.com/udacifitness-45.png"
+    },
+    "ios": {
+      "bundleIdentifier": "org.udacifitness.exp",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "org.udacifitness.exp",
+      "versionCode": 1
+    }
   }
 }
